--- a/package.json
+++ b/package.json
@@ -7,8 +7,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "16.8.3",
-    "react-native": "0.59.3"
+    "react-native": "0.59.3",
+    "react-native-gesture-handler": "^1.1.0",
+    "react-native-gravatar": "^1.0.2",
+    "react-native-image-picker": "^0.28.1",
+    "react-native-vector-icons": "^6.4.2",
+    "react-navigation": "^3.6.1",
+    "react-redux": "^6.0.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.4.3",
@@ -20,5 +29,10 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "rnpm" : {
+    "assets": [
+      "./assets/fonts/"
+    ]
   }
 }
